--- a/app/index.html
+++ b/app/index.html
@@ -14,15 +14,9 @@
 </head>
 <body>
   <div class="content">
-    <h1>Welcome to Caribou!</h1>
-    <p>
-      Caribou is a Yeoman generator that creates a nice environment for you to
-      start working on front-end web applications. For more information on how to
-      use it, please visit <a href="https://github.com/wbyoung/caribou">the
-      GitHub project page</a>.
+<!--     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
     </p>
-    <img src="/media/caribou.png" alt="Caribou">
-  </div>
+ -->  </div>
 
   <!-- @if GULP_ENVIRONMENT='development' -->
   <script type="text/javascript" src="/scripts/vendor.js"></script>
